# IAR1

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/workflows/: build.yaml
cmake/common/: buildnumber.cmake
data/locale/: en-US.ini
docs/: PAIRING_CODE.md  SETUP_OBS.md  TROUBLESHOOTING.md
protocol/: IAR1.md
src/: plugin_main.cpp
src/core/: iar_packet.cpp  iar_packet.hpp  iar_version.h  opus_encoder.cpp  opus_encoder.hpp  ring_buffer.hpp  settings.cpp  settings.hpp
src/net/: ws_client.cpp  ws_client.hpp
src/obs/: engine.cpp  engine.hpp  settings_store.cpp  settings_store.hpp
src/ui/: iar_dock.cpp  iar_dock.hpp  iar_settings_dialog.cpp  iar_settings_dialog.hpp
test/: CMakeLists.txt  core_tests.cpp
